--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
                 <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
                 <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
                 <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
             </div>
         </section>
 
