--- a/index.html
+++ b/index.html
@@ -19,31 +19,6 @@
                 <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
                 <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
                 <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
             </div>
         </section>
 
@@ -51,6 +26,106 @@
             <h2>Anggota Kelas</h2>
             <div class="student-cards-container">
                 <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
+                    <h3>Nama Siswa 1</h3>
+                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
+                    <h3>Nama Siswa 2</h3>
+                    <p>Motto: "Belajar adalah investasi terbaik."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
+                    <h3>Nama Siswa 3</h3>
+                    <p>Motto: "Kreativitas tanpa batas."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
+                    <h3>Nama Siswa 4</h3>
+                    <p>Motto: "Pantang menyerah."</p>
+                </div>
+                     <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
+                    <h3>Nama Siswa 1</h3>
+                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
+                    <h3>Nama Siswa 2</h3>
+                    <p>Motto: "Belajar adalah investasi terbaik."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
+                    <h3>Nama Siswa 3</h3>
+                    <p>Motto: "Kreativitas tanpa batas."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
+                    <h3>Nama Siswa 4</h3>
+                    <p>Motto: "Pantang menyerah."</p>
+                </div>
+                     <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
+                    <h3>Nama Siswa 1</h3>
+                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
+                    <h3>Nama Siswa 2</h3>
+                    <p>Motto: "Belajar adalah investasi terbaik."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
+                    <h3>Nama Siswa 3</h3>
+                    <p>Motto: "Kreativitas tanpa batas."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
+                    <h3>Nama Siswa 4</h3>
+                    <p>Motto: "Pantang menyerah."</p>
+                </div>
+                      <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
+                    <h3>Nama Siswa 1</h3>
+                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
+                    <h3>Nama Siswa 2</h3>
+                    <p>Motto: "Belajar adalah investasi terbaik."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
+                    <h3>Nama Siswa 3</h3>
+                    <p>Motto: "Kreativitas tanpa batas."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
+                    <h3>Nama Siswa 4</h3>
+                    <p>Motto: "Pantang menyerah."</p>
+                </div>
+                     <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
+                    <h3>Nama Siswa 1</h3>
+                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
+                    <h3>Nama Siswa 2</h3>
+                    <p>Motto: "Belajar adalah investasi terbaik."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
+                    <h3>Nama Siswa 3</h3>
+                    <p>Motto: "Kreativitas tanpa batas."</p>
+                </div>
+                <div class="student-card">
+                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
+                    <h3>Nama Siswa 4</h3>
+                    <p>Motto: "Pantang menyerah."</p>
+                </div>
+                      <div class="student-card">
                     <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
                     <h3>Nama Siswa 1</h3>
                     <p>Motto: "Berani bermimpi, berani bertindak."</p>
