--- a/index.html
+++ b/index.html
@@ -3,154 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kelas 12 B2 - Cerita Kami</title>
+    <title>Kelas 12 B2 - Bersama Meraih Impian</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Kelas 12 B2</h1>
-            <p>Satu kelas, sejuta cerita. Menuju masa depan yang cerah bersama!</p>
+            <h1 class="animate-text">Kelas 12 B2</h1>
+            <p class="animate-text">Satu langkah menuju masa depan yang gemilang.</p>
         </header>
 
-        <section class="gallery">
-            <h2>Momen Terbaik Kami</h2>
-            <div class="photo-grid">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+1" alt="Foto Kelas 1" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+2" alt="Foto Kelas 2" class="photo-item">
-                <img src="https://via.placeholder.com/400x300.png?text=Foto+Kelas+3" alt="Foto Kelas 3" class="photo-item">
+        <section class="hero">
+            <div class="hero-content">
+                <img src="https://via.placeholder.com/600x400.png?text=Foto+Kelas+12+B2" alt="Foto Kelas 12 B2" class="class-photo animate-fade-in">
+                <div class="text-content animate-slide-in">
+                    <h2>Kebersamaan adalah Kunci</h2>
+                    <p>Di kelas ini, kami bukan hanya belajar, tetapi juga tumbuh bersama. Setiap hari adalah petualangan baru menuju kesuksesan.</p>
+                </div>
             </div>
         </section>
 
-        <section class="student-list">
-            <h2>Anggota Kelas</h2>
-            <div class="student-cards-container">
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
-                    <h3>Nama Siswa 1</h3>
-                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
-                    <h3>Nama Siswa 2</h3>
-                    <p>Motto: "Belajar adalah investasi terbaik."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
-                    <h3>Nama Siswa 3</h3>
-                    <p>Motto: "Kreativitas tanpa batas."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
-                    <h3>Nama Siswa 4</h3>
-                    <p>Motto: "Pantang menyerah."</p>
-                </div>
-                     <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
-                    <h3>Nama Siswa 1</h3>
-                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
-                    <h3>Nama Siswa 2</h3>
-                    <p>Motto: "Belajar adalah investasi terbaik."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
-                    <h3>Nama Siswa 3</h3>
-                    <p>Motto: "Kreativitas tanpa batas."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
-                    <h3>Nama Siswa 4</h3>
-                    <p>Motto: "Pantang menyerah."</p>
-                </div>
-                     <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
-                    <h3>Nama Siswa 1</h3>
-                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
-                    <h3>Nama Siswa 2</h3>
-                    <p>Motto: "Belajar adalah investasi terbaik."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
-                    <h3>Nama Siswa 3</h3>
-                    <p>Motto: "Kreativitas tanpa batas."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
-                    <h3>Nama Siswa 4</h3>
-                    <p>Motto: "Pantang menyerah."</p>
-                </div>
-                      <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
-                    <h3>Nama Siswa 1</h3>
-                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
-                    <h3>Nama Siswa 2</h3>
-                    <p>Motto: "Belajar adalah investasi terbaik."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
-                    <h3>Nama Siswa 3</h3>
-                    <p>Motto: "Kreativitas tanpa batas."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
-                    <h3>Nama Siswa 4</h3>
-                    <p>Motto: "Pantang menyerah."</p>
-                </div>
-                     <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
-                    <h3>Nama Siswa 1</h3>
-                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
-                    <h3>Nama Siswa 2</h3>
-                    <p>Motto: "Belajar adalah investasi terbaik."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
-                    <h3>Nama Siswa 3</h3>
-                    <p>Motto: "Kreativitas tanpa batas."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
-                    <h3>Nama Siswa 4</h3>
-                    <p>Motto: "Pantang menyerah."</p>
-                </div>
-                      <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 1">
-                    <h3>Nama Siswa 1</h3>
-                    <p>Motto: "Berani bermimpi, berani bertindak."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 2">
-                    <h3>Nama Siswa 2</h3>
-                    <p>Motto: "Belajar adalah investasi terbaik."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 3">
-                    <h3>Nama Siswa 3</h3>
-                    <p>Motto: "Kreativitas tanpa batas."</p>
-                </div>
-                <div class="student-card">
-                    <img src="https://via.placeholder.com/100" alt="Foto Siswa 4">
-                    <h3>Nama Siswa 4</h3>
-                    <p>Motto: "Pantang menyerah."</p>
-                </div>
-                </div>
+        <section class="vision-mission">
+            <div class="card animate-fade-in">
+                <h3>Visi Kami</h3>
+                <p>Menjadi generasi muda yang unggul dalam akademik, berkarakter mulia, dan siap menghadapi tantangan global.</p>
+            </div>
+            <div class="card animate-fade-in">
+                <h3>Misi Kami</h3>
+                <ul>
+                    <li>Meningkatkan prestasi akademik melalui kolaborasi dan inovasi.</li>
+                    <li>Mengembangkan potensi diri dan minat setiap siswa.</li>
+                    <li>Menciptakan lingkungan belajar yang harmonis dan suportif.</li>
+                </ul>
+            </div>
         </section>
 
-        <footer>
-            <p>&copy; 2025 Kelas 12 B2. Semua Hak Dilindungi.</p>
-        </footer>
+        <section class="motivation">
+            <div class="motivation-quote animate-zoom-in">
+                <p>"Masa depan adalah milik mereka yang percaya pada keindahan impian mereka."</p>
+                <span>- Eleanor Roosevelt</span>
+            </div>
+        </section>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
